# DragonForge-Engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  clean.lua  delete_empty.ps1  generate_project_files.ps1  link_data.bat  premake5.lua  xmake.lua
libraries/: CMakeLists.txt  premake5.lua
libraries/assimp/lib/: assimp-vc143-mt.exp  assimp-vc143-mt.lib  assimp-vc143-mtd.exp  assimp-vc143-mtd.lib  zlibstaticd.lib
libraries/freetype/lib/: freetyped.lib
libraries/glad/: CMakeLists.txt
libraries/imgui/: CMakeLists.txt  premake5.lua
libraries/msdf-atlas-gen/: premake5.lua
libraries/msdf-atlas-gen/lib/: msdf-atlas-gen.lib
libraries/msdfgen/include/core/: base.h
libraries/msdfgen/lib/: msdfgen-core.lib  msdfgen-ext.lib  msdfgen-extd.lib
libraries/opengl/: premake5.lua
libraries/stb/: CMakeLists.txt
libraries/tracy/: premake5.lua
libraries/vulkan/: CMakeLists.txt  premake5.lua
source/: CMakeLists.txt  generate_project_files.ps1  main.cpp  premake5.lua
source/application/: CMakeLists.txt  cApplication.cpp  cApplication.h  cTesting.hpp  main.cpp  premake5.lua  xmake.lua
source/application/application/: cApplication.cpp  cApplication.h  cTesting.h
source/application/main/: main.cpp
source/application/settings/: executable_icon.rc
source/core/events/: cEvent.h  iEvent.h
source/core/filesystem/: cFileSystem.cpp  cFileSystem.h
source/core/input/: Input.h  iController.h  iPlayerController.h
source/core/log/: Log.cpp  Log.h
source/core/managers/: cCameraManager.cpp  cCameraManager.h  cEventManager.cpp  cEventManager.h  cFontManager.cpp  cFontManager.h  cInputManager.cpp  cInputManager.h  cLightManager.h  cModelManager.cpp  cModelManager.h  cQuadManager.cpp  cQuadManager.h  cRenderCallbackManager.h  iAssetManager.h  iRenderAssetManager.h
source/core/managers/assets/: cCameraManager.cpp  cFontManager.cpp  cLightManager.cpp  cLightManager.h  cModelManager.cpp  cQuadManager.cpp  iAssetManager.h
source/core/math/: Math.h  cMatrix4x4.h  cTransform.cpp  cTransform.h  cVector2.h  cVector3.h  cVector4.h
source/core/memory/: Memory.cpp  Memory.h
source/core/misc/: Misc.h  cColor.cpp  cColor.h  cTimer.cpp  cTimer.h  cTransform.cpp  cTransform.h  iSingleton.h
source/core/profiling/: Profiling.cpp  Profiling.h  cTimer.h
source/core/renderer/: cRenderer.cpp  cRenderer.h
source/core/rendering/: cFramebuffer.cpp  cFramebuffer.h  cRenderCallbacks.h  cRenderer.cpp  cRenderer.h  cShader.cpp  cShader.h
source/core/rendering/assets/: cFont.cpp  cFont.h  cLight.cpp  cLight.h  cMesh.cpp  cMesh.h  cModel.cpp  cModel.h  cQuad.cpp  cQuad.h  cTexture.cpp  cTexture.h  iRenderAsset.cpp  iRenderAsset.h
source/core/rendering/callback/: cRenderCallback.h
source/core/rendering/callbacks/: DefaultFontCB.h  DefaultLightCB.h  DefaultMeshCB.h  DefaultQuadCB.h  DefaultTextCB.h  cRenderCallback.h
source/core/rendering/camera/: cCamera.cpp  cCamera.h  cFreeFlightCamera.cpp  cFreeFlightCamera.h
source/engine/: CMakeLists.txt  premake5.lua  xmake.lua
source/engine/core/: Log.cpp  Log.h  cFileSystem.cpp  cFileSystem.h  xmake.lua
source/engine/events/: cEvent.h  cEvent.inl  eEventType.h  iEvent.h
source/engine/filesystem/: cFileSystem.cpp  cFileSystem.h
source/engine/graphics/: cRenderer.cpp  cRenderer.h  clay-imgui-renderer.h
source/engine/input/: Input.h  InputTypes.h  iPlayerController.h
source/engine/log/: Log.cpp  Log.h
source/engine/managers/: cCameraManager.cpp  cCameraManager.h  cEventManager.h  cEventManager.inl  cFontManager.cpp  cFontManager.h  cInputManager.cpp  cInputManager.h  cLightManager.cpp  cLightManager.h  cRenderCallbackManager.h  cRenderCallbackManager.inl  iObjectManager.h  iObjectManager.inl
source/engine/math/: cMatrix.h  cMatrix.inl  cMatrixVectorProxy.h  cMatrixVectorProxy.inl  cQuaternion.h  cQuaternion.inl  cVector.h  cVector.inl  math.h
source/engine/misc/: Misc.h  cColor.cpp  cColor.h  cTimer.cpp  cTimer.h  cTransform.cpp  cTransform.h  iSingleton.h  iSingleton.inl
source/engine/profiling/: Profiling.cpp  Profiling.h  ProfilingMacros.h  ProfilingMacros_opengl.h  ProfilingMacros_vulkan.h  cProfiling.cpp  cProfiling.h
source/engine/rendering/: cFramebuffer.cpp  cFramebuffer.h  cRenderCallback.h  cRenderer.cpp  cRenderer.h  cRendererSingleton.cpp  cRendererSingleton.h  cShader.cpp  cShader.h  iFramebuffer.cpp  iFramebuffer.h  iRenderer.cpp  iRenderer.h  iShader.h
source/framework/: cApplication.cpp  cApplication.h  cTesting.h  main.cpp
source/framework/application/: cApplication.cpp  cApplication.h  cTesting.h
source/rendering/: cRenderCallbacks.cpp  cShader.cpp  cShader.h
source/resources/: executable.rc
source/shaders/: CMakeLists.txt  fragment.frag  premake5.lua  test_fragment.glsl  test_vertex.glsl  vertex.vert  xmake.lua
source/shaders/default/: default_font_fragment.frag  default_font_vertex.glsl  default_font_vertex.vert  default_mesh_ambient.vert.slang  default_mesh_ambient_fragment.frag  default_mesh_ambient_fragment.glsl  default_mesh_ambient_vertex.glsl  default_mesh_ambient_vertex.vert  default_mesh_deferred_fragment.frag  default_mesh_deferred_fragment.glsl  default_mesh_deferred_vertex.glsl  default_mesh_deferred_vertex.vert  default_quad_deferred_fragment.frag  default_quad_deferred_fragment.glsl  default_quad_deferred_vertex.glsl  default_quad_deferred_vertex.vert  default_quad_fragment.frag  default_quad_fragment.glsl  default_quad_vertex.glsl  default_text_fragment.glsl  default_text_vertex.glsl
source/shaders/deferred/: deferred_mesh.frag.slang  deferred_mesh.vert.slang  deferred_quad.frag.slang  deferred_quad.vert.slang  deferred_quad_final.frag.slang
source/shaders/forward/: default_mesh_ambient.frag.slang  default_mesh_ambient.vert.slang  default_quad.frag.slang  default_quad.vert.slang  forward_mesh_ambient.frag.slang  forward_mesh_ambient.vert.slang
source/shaders/gui/: clay.frag.slang  clay.vert.slang
source/shaders/ultralight/: ultralight_fill.frag.slang  ultralight_fill.vert.slang  ultralight_fill_path.frag.slang  ultralight_fill_path.vert.slang
(+561 files in other folders)
